Update 'rstccp5xk-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:fe756a670eb590791ef6e271243b6e7c074d75e6@sha256:cf181b121003c8168356ee6f02a315a4ea6b03693feb2fb5814f8cb69455f675

--- a/components/rstccp5xk-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/rstccp5xk-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rstccp5xk-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:fe756a670eb590791ef6e271243b6e7c074d75e6@sha256:cf181b121003c8168356ee6f02a315a4ea6b03693feb2fb5814f8cb69455f675
+          name: container-image
